feat: polish retry and circuitbreaker